--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,7 +12,7 @@
     background-color: transparent;
 
     a {
-        color: white;
+        color: black;
         font-size: 1.2rem;
         text-decoration: none; /* Remove underline from links */
         font-weight: 300;
