--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -16,6 +16,7 @@
         font-size: 1.2rem;
         text-decoration: none; /* Remove underline from links */
         font-weight: 300;
+        cursor: pointer;
     }
     margin: 0;
 }
