--- a/src/components/Service/Service.css
+++ b/src/components/Service/Service.css
@@ -1,5 +1,5 @@
 .service {
-    height: 40vh;
+    height: 42vh;
     width: 30vw;
     display: flex;
     flex-direction: column;
@@ -28,6 +28,7 @@
   
   .service_name {
     margin: 0;
+    
     color: #303433;
     font-size: 1.3rem;
   }
@@ -77,4 +78,37 @@
       margin-top: -2vh;
     }
   }
+ 
+  
+  .more_info {
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+    padding:10px 2vw ;
+  }
+  
+  .service_detail {
+    display: flex;
+    align-items: center; 
+    justify-content: center;/* Center aligns both text and star */
+  }
+  
+  .detail_label {
+    font-weight: bold;
+    margin-right: 5px;
+  }
+  
+  .rating_value {
+    display: flex;
+    align-items: center;
+    gap: 3px;
+  }
+  
+  .star_icon {
+    color:  #914EC2;/* Same color as the description */
+    font-size: 1.2em; /* Increase size of the star */
+    vertical-align: middle; /* Aligns star vertically in the middle */
+    margin-left: 3px;
+  }
+  
   
