--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -32,7 +32,7 @@
       display: flex;
       flex-direction: column;
       flex-wrap: nowrap;
-      height: 250vh;
+      height: auto;
     }
   }
   
